--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_exonerado.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_exonerado.jrxml
@@ -10,7 +10,9 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[SELECT concat(e.nombreempleado,' ',e.apellidoempleado) as 'Nombre',p.nombrepuesto as 'Nombre de Puesto',u.nombreubicacion as 'Ubicacion',c.numeroacuerdocomite as'No. Acuerdo' , DATE_FORMAT(c.fechadesdecomite, "%d/ %m /%Y") as 'Fecha Desde', DATE_FORMAT(c.fechahastacomite, "%d/ %m /%Y") as 'Fecha Hasta' FROM `empleado` e, puesto p , ubicacionfisica u, comite c WHERE e.codigopuesto=p.codigopuesto and e.codigoempleado=u.codigoempleado and e.codigoempleado=c.codigoempleado and e.estadoempleado=1]]>
+		<![CDATA[SELECT concat(e.nombreempleado,' ',e.apellidoempleado) as 'Nombre',p.nombrepuesto as 'Nombre de Puesto',u.nombreubicacion as 'Ubicacion',c.acuerdocuadrodirectivo as'No. Acuerdo' , DATE_FORMAT(c.fechapresentaciondesde, "%d/ %m /%Y") as 'Fecha Desde', DATE_FORMAT(c.fechapresentacionhasta, "%d/ %m /%Y") as 'Fecha Hasta' FROM `empleado` e, puesto p , ubicacionfisica u, cuadrodirectivo c WHERE e.codigopuesto=p.codigopuesto and e.codigoempleado=u.codigoempleado and e.codigoempleado=c.codigoempleado and e.estadoempleado=1
+and c.fechapresentaciondesde >= STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y')
+and c.fechapresentacionhasta <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 	</queryString>
 	<field name="Nombre" class="java.lang.String"/>
 	<field name="Nombre de Puesto" class="java.lang.String"/>
