--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_bitacoras.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_bitacoras.jrxml
@@ -16,7 +16,7 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[select nombreeventobitacora,DATE_FORMAT(fechabitacora,'%d/%m/%Y') AS "Fecha Evento",ip,codigousuariobitacora from bitacora]]>
+		<![CDATA[select nombreeventobitacora,DATE_FORMAT(fechabitacora,'%d/%m/%Y') AS "Fecha Evento",ip,codigousuariobitacora from bitacora where fechabitacora >=STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y') and fechabitacora <=STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y') ]]>
 	</queryString>
 	<field name="nombreeventobitacora" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
@@ -49,113 +49,113 @@
 	<pageHeader>
 		<band height="105" splitType="Stretch">
 			<staticText>
-				<reportElement x="577" y="86" width="39" height="17" uuid="d7185be9-1db6-44cc-99e0-b3055d9c18df"/>
+				<reportElement uuid="d7185be9-1db6-44cc-99e0-b3055d9c18df" x="577" y="86" width="39" height="17"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<textField evaluationTime="Report">
-				<reportElement x="638" y="72" width="27" height="17" uuid="774dc551-845b-49ba-8b5b-3ba6235657ff"/>
+				<reportElement uuid="774dc551-845b-49ba-8b5b-3ba6235657ff" x="638" y="72" width="27" height="17"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="329" y="22" width="132" height="17" uuid="bd48dc4f-4177-406d-b9e3-cd8b778bfa72"/>
+				<reportElement uuid="bd48dc4f-4177-406d-b9e3-cd8b778bfa72" x="329" y="22" width="132" height="17"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Direccion de Recursos Humanos]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="160" y="87" width="100" height="14" uuid="683af6a7-7e30-463b-a76f-b4b2fcfcb8da"/>
+				<reportElement uuid="683af6a7-7e30-463b-a76f-b4b2fcfcb8da" x="160" y="87" width="100" height="14"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="307" y="8" width="186" height="17" uuid="0dc9c488-714e-4c9d-a4db-57f2ad7df36a"/>
+				<reportElement uuid="0dc9c488-714e-4c9d-a4db-57f2ad7df36a" x="307" y="8" width="186" height="17"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Ministerio de Justicia  y Segurdiad Pública]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="133" y="72" width="100" height="17" uuid="ee627735-fbe9-4dba-91a9-4525017d70fe"/>
+				<reportElement uuid="ee627735-fbe9-4dba-91a9-4525017d70fe" x="133" y="72" width="100" height="17"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[rpt_reporte_bitc]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="310" y="77" width="69" height="17" uuid="12821ffd-debc-425c-811f-9d740d4a7c42"/>
+				<reportElement uuid="12821ffd-debc-425c-811f-9d740d4a7c42" x="310" y="77" width="69" height="17"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<image>
-				<reportElement x="118" y="0" width="80" height="70" uuid="0810417f-3062-4c32-9189-3420387e971e"/>
+				<reportElement uuid="0810417f-3062-4c32-9189-3420387e971e" x="118" y="0" width="80" height="70"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
 			</image>
 			<textField>
-				<reportElement x="418" y="74" width="58" height="17" uuid="4c68edd0-7d3a-43ef-be20-8b80426ab5a3"/>
+				<reportElement uuid="4c68edd0-7d3a-43ef-be20-8b80426ab5a3" x="418" y="74" width="58" height="17"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="558" y="72" width="67" height="17" uuid="f509bd02-5912-45fd-84a2-1031aab2e040"/>
+				<reportElement uuid="f509bd02-5912-45fd-84a2-1031aab2e040" x="558" y="72" width="67" height="17"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="350" y="35" width="66" height="17" uuid="42277e22-9e1a-4ea5-8a31-343dfbede377"/>
+				<reportElement uuid="42277e22-9e1a-4ea5-8a31-343dfbede377" x="350" y="35" width="66" height="17"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[SISASMRH]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="339" y="60" width="92" height="17" uuid="6bd6698d-2de7-4b51-b8d7-ae8610102c94"/>
+				<reportElement uuid="6bd6698d-2de7-4b51-b8d7-ae8610102c94" x="339" y="60" width="92" height="17"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Reporte de Bitacora]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="612" y="86" width="94" height="17" uuid="fd32f117-a700-4df2-aabc-8ca171e9d449"/>
+				<reportElement uuid="fd32f117-a700-4df2-aabc-8ca171e9d449" x="612" y="86" width="94" height="17"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="281" y="76" width="33" height="17" uuid="29d48d35-80ed-4827-96d3-50405108fc47"/>
+				<reportElement uuid="29d48d35-80ed-4827-96d3-50405108fc47" x="281" y="76" width="33" height="17"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Desde]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="133" y="87" width="33" height="14" uuid="2dd51f07-73b7-449f-9e6f-1c7950d5165e"/>
+				<reportElement uuid="2dd51f07-73b7-449f-9e6f-1c7950d5165e" x="133" y="87" width="33" height="14"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Fecha:]]></text>
 			</staticText>
 			<image>
-				<reportElement x="570" y="0" width="70" height="70" uuid="be79d293-0c64-4ae6-9d16-c118dc8acd6b"/>
+				<reportElement uuid="be79d293-0c64-4ae6-9d16-c118dc8acd6b" x="570" y="0" width="70" height="70"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement x="389" y="75" width="33" height="17" uuid="c1bc2058-1519-4cc2-b475-2b1f9a8d4346"/>
+				<reportElement uuid="c1bc2058-1519-4cc2-b475-2b1f9a8d4346" x="389" y="75" width="33" height="17"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
@@ -166,40 +166,40 @@
 	<columnHeader>
 		<band height="17" splitType="Stretch">
 			<rectangle>
-				<reportElement x="134" y="0" width="514" height="14" uuid="3f5ec224-6683-4c36-a60c-4919fc60e52c"/>
+				<reportElement uuid="3f5ec224-6683-4c36-a60c-4919fc60e52c" x="134" y="0" width="514" height="14"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="167" y="0" width="99" height="14" uuid="eaa00365-c1e7-4670-b312-dcdf1f623e84"/>
+				<reportElement uuid="eaa00365-c1e7-4670-b312-dcdf1f623e84" x="167" y="0" width="99" height="14"/>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Nombre Evento]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="456" y="0" width="101" height="14" uuid="a1603e0d-1ec8-41e4-b2d1-4035439ead8a"/>
+				<reportElement uuid="a1603e0d-1ec8-41e4-b2d1-4035439ead8a" x="456" y="0" width="101" height="14"/>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Ip]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="573" y="0" width="80" height="14" uuid="00e8157b-f688-499d-9c58-ae09bb4b3c64"/>
+				<reportElement uuid="00e8157b-f688-499d-9c58-ae09bb4b3c64" x="573" y="0" width="80" height="14"/>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Usuario]]></text>
 			</staticText>
 			<line>
-				<reportElement x="346" y="0" width="1" height="14" uuid="e9fa471f-c87c-4576-b7b9-04432e137cee"/>
+				<reportElement uuid="e9fa471f-c87c-4576-b7b9-04432e137cee" x="346" y="0" width="1" height="14"/>
 			</line>
 			<line>
-				<reportElement x="444" y="0" width="1" height="14" uuid="7cddf3bb-a8a6-42a1-907e-b4eeaa4c67de"/>
+				<reportElement uuid="7cddf3bb-a8a6-42a1-907e-b4eeaa4c67de" x="444" y="0" width="1" height="14"/>
 			</line>
 			<line>
-				<reportElement x="563" y="0" width="1" height="14" uuid="08f8a1f0-dcde-498a-a25d-44fd132e74a0"/>
+				<reportElement uuid="08f8a1f0-dcde-498a-a25d-44fd132e74a0" x="563" y="0" width="1" height="14"/>
 			</line>
 			<staticText>
-				<reportElement x="369" y="0" width="68" height="14" uuid="d151d411-ef4f-4c8e-a6ea-35b65e1513c1"/>
+				<reportElement uuid="d151d411-ef4f-4c8e-a6ea-35b65e1513c1" x="369" y="0" width="68" height="14"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
@@ -210,19 +210,22 @@
 	<detail>
 		<band height="20" splitType="Stretch">
 			<textField>
-				<reportElement x="139" y="0" width="197" height="20" uuid="1e3deb07-08f9-408e-98b9-73157f26da5e"/>
+				<reportElement uuid="1e3deb07-08f9-408e-98b9-73157f26da5e" x="139" y="0" width="197" height="20"/>
+				<textElement/>
 				<textFieldExpression><![CDATA[$F{nombreeventobitacora}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="456" y="0" width="101" height="20" uuid="4cff886c-5493-4d6e-bff5-992bada5c6b9"/>
+				<reportElement uuid="4cff886c-5493-4d6e-bff5-992bada5c6b9" x="456" y="0" width="101" height="20"/>
+				<textElement/>
 				<textFieldExpression><![CDATA[$F{ip}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="574" y="0" width="79" height="20" uuid="bb7e0aa1-ee4d-43ad-8385-c719c6fb4af4"/>
+				<reportElement uuid="bb7e0aa1-ee4d-43ad-8385-c719c6fb4af4" x="574" y="0" width="79" height="20"/>
+				<textElement/>
 				<textFieldExpression><![CDATA[$F{codigousuariobitacora}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="365" y="0" width="72" height="14" uuid="12c6d81b-3f26-4c3e-b406-8939466afb7a"/>
+				<reportElement uuid="12c6d81b-3f26-4c3e-b406-8939466afb7a" x="365" y="0" width="72" height="14"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
@@ -239,14 +242,14 @@
 	<summary>
 		<band height="42" splitType="Stretch">
 			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement mode="Opaque" x="559" y="10" width="110" height="13" backcolor="#FFFFFF" uuid="d4df4842-0d38-4d29-9d1d-3dc3e7f019b5"/>
+				<reportElement uuid="d4df4842-0d38-4d29-9d1d-3dc3e7f019b5" mode="Opaque" x="559" y="10" width="110" height="13" backcolor="#FFFFFF"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9" isUnderline="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Total de Registros:    " + $V{REPORT_COUNT}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="562" y="3" width="107" height="1" uuid="ff460cd9-1bff-4a9b-8e4f-d06fee233b2a"/>
+				<reportElement uuid="ff460cd9-1bff-4a9b-8e4f-d06fee233b2a" x="562" y="3" width="107" height="1"/>
 			</line>
 		</band>
 	</summary>
