agregado soporte para fechas en entidad de todo el sitio

--- a/src/main/resources/templates/fragments/formacionacademica/formacionacademicaform.html
+++ b/src/main/resources/templates/fragments/formacionacademica/formacionacademicaform.html
@@ -227,74 +227,74 @@
                     
 		    $('#fechanacimiento').datepicker({
 // 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		       dateFormat: 'dd/mm/YYYY'
+		       dateFormat: 'dd/mm/yy'
 		    });
 		    
 		    $('#fechasepu').datepicker({
 // 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'dd/mm/YYYY'
+		        dateFormat: 'dd/mm/yy'
 		    });
                     
                     $('#fechasepr').datepicker({
 // 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'dd/mm/YYYY'
+		        dateFormat: 'dd/mm/yy'
 		    });
                     
                     $('#fechamin').datepicker({
 // 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'dd/mm/YYYY'
+		        dateFormat: 'dd/mm/yy'
 		    });
                     
                     $('#fechanacde').datepicker({
 // 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'dd/mm/YYYY'
+		        dateFormat: 'dd/mm/yy'
 		    });
                     
                     $('#fechahfa').datepicker({
 // 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'dd/mm/YYYY'
+		        dateFormat: 'dd/mm/yy'
 		    });
                     
                     $('#fechadfa').datepicker({
 // 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'dd/mm/YYYY'
+		        dateFormat: 'dd/mm/yy'
 		    });
                     
                     $('#fechacapreevento').datepicker({
 // 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'dd/mm/YYYY'
+		        dateFormat: 'dd/mm/yy'
 		    });
                     
                     $('fechadexlaboral').datepicker({
 // 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'dd/mm/YYYY'
+		        dateFormat: 'dd/mm/yy'
 		    });
                     $('fechahexlaboral').datepicker({
 // 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'dd/mm/YYYY'
+		        dateFormat: 'dd/mm/yy'
 		    });
                     $('fechadubf').datepicker({
 // 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'dd/mm/YYYY'
+		        dateFormat: 'dd/mm/yy'
 		    });
                     $('fechahubf').datepicker({
 // 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'dd/mm/YYYY'
+		        dateFormat: 'dd/mm/yy'
 		    });
                     
                      $('fechaicontrato').datepicker({
 // 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'dd/mm/YYYY'
+		        dateFormat: 'dd/mm/yy'
 		    });
                     
                      $('fechafcontrato').datepicker({
 // 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'dd/mm/YYYY'
+		        dateFormat: 'dd/mm/yy'
 		    });
                     
                      $('fechahubf').datepicker({
 // 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'dd/mm/YYYY'
+		        dateFormat: 'dd/mm/yy'
 		    });
 		});
                 $('#btnGuardar').click(function(){
