--- a/src/main/resources/templates/fragments/usuario/usuarioform.html
+++ b/src/main/resources/templates/fragments/usuario/usuarioform.html
@@ -27,7 +27,7 @@
                         </div>
                         <div class="popup col-sm-1"><b>
                                 <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('nomUser')" onmouseout ="javascript:ocultarAyuda('nomUser')">a</a></b>
-                            <span class="popuptext" id="nomUser">Ingrese los Nombre del Usuario. Solo es permitido digitos 50 caracteres. !!</span>
+                            <span class="popuptext" id="nomUser">Ingrese los Nombres del Usuario. Solo es permitido digitos 50 caracteres. !!</span>
                         </div>
                     </div>
                     <div class="form-group">
@@ -37,7 +37,7 @@
                         </div>
                         <div class="popup col-sm-1"><b>
                                 <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('nomUser')" onmouseout ="javascript:ocultarAyuda('nomUser')">a</a></b>
-                            <span class="popuptext" id="nomUser">Ingrese el identificador del Usuario. Solo es permitido digitos 50 caracteres. !!</span>
+                            <span class="popuptext" id="nomUser">Ingrese los apellidos del Usuario. Solo es permitido digitos 50 caracteres. !!</span>
                         </div>
                     </div>
                     <div class="form-group">
